fix cube size to avoid overflow

--- a/src/css/cube.css
+++ b/src/css/cube.css
@@ -1,7 +1,7 @@
 .container {
     transform-style: preserve-3d;
     width: 100%;
-    height: 50vh;
+    height: 500px;
 }
 
 #cubeHolder{
